--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <a href="./home/profile.html"  class="btn-shinee">Skip-></a>
       <script type="text/javascript">
         function openPage2() {
-            window.location.href = './index.html';
+            window.location.href = 'https://wmbolles.com/';
         }
         setTimeout(openPage2, 5500);
     </script>
