--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
       </h3>
       <img id="astronaut" src="https://raw.githubusercontent.com/tsparticles/404-templates/1d9b05325b79e596797aae3e96f87143b5fdcf17/space/images/astronaut.svg" />
       <img id="planet" src="https://raw.githubusercontent.com/tsparticles/404-templates/1d9b05325b79e596797aae3e96f87143b5fdcf17/space/images/planet.svg" />
-      <a href="./home/profile.html"><button class="denied__link">Home</button></a><br>
+      <a href="https://wmbolles.com/"><button class="denied__link">Home</button></a><br>
 	  <p style="color: #ffffff;"> Developed by <a style="text-transform: none; color: #ffbb39" href="https://github.com/wmbolles">Wassim Bolles</a> </p>
     </div>
 
