--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <link rel="stylesheet" href="assets/css/intro.css">
 	<link rel="icon" type="image/x-icon" href="assets/wm.png">
     <title>wmBolles</title>
+
+	
+	<meta property="og:title" content="Wassim Bolles">
+    <meta property="og:description" content="Wassim bolless profile">
+    <meta property="og:image" content="https://scontent.fcmn1-3.fna.fbcdn.net/v/t39.30808-6/408049471_1781674012272313_6071001480103352144_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=5f2048&_nc_ohc=2nj74q6IjuEQ7kNvgGFFNfp&_nc_ht=scontent.fcmn1-3.fna&oh=00_AfA76Biw6_I5JiLTor5VOJlLGAKw3-1afp95BdolEAkSfA&oe=6630B1AF">
+    <meta property="og:url" content="https://example.com">
+    <meta property="og:type" content="wmbolles.com">
+    
+    <!-- Twitter Card Meta Tags (optional) -->
+    <meta name="twitter:card" content="Profile image">
+    <meta name="twitter:title" content="Wassim Bolles">
+    <meta name="twitter:description" content="Wassim Bolles Profile">
+    <meta name="twitter:image" content="https://scontent.fcmn1-3.fna.fbcdn.net/v/t39.30808-6/408049471_1781674012272313_6071001480103352144_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=5f2048&_nc_ohc=2nj74q6IjuEQ7kNvgGFFNfp&_nc_ht=scontent.fcmn1-3.fna&oh=00_AfA76Biw6_I5JiLTor5VOJlLGAKw3-1afp95BdolEAkSfA&oe=6630B1AF">
+
+
 </head>
 <body>
 <div class="nav-wrapper">
