--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <a href="https://github.com/wmbolles" class="btn-shine" target="_blank">wmBolles</a>
       <script type="text/javascript">
         function openPage2() {
-            window.location.href = 'https://wmbolles.com/';
+            window.location.href = './index.html';
         }
         setTimeout(openPage2, 5500);
     </script>
