--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>It Architect Student. </p>
           </header>
       
-          <img src="https://scontent.fcmn1-3.fna.fbcdn.net/v/t39.30808-6/408049471_1781674012272313_6071001480103352144_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=5f2048&_nc_ohc=2nj74q6IjuEQ7kNvgGFFNfp&_nc_ht=scontent.fcmn1-3.fna&oh=00_AfA76Biw6_I5JiLTor5VOJlLGAKw3-1afp95BdolEAkSfA&oe=6630B1AF" alt="" />
+          <img src="https://avatars.githubusercontent.com/u/106280014?v=4" alt="" />
       
           <section>
             <h2>Education</h2>
