--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         function openPage2() {
             window.location.href = 'https://wmbolles.me';
         }
-        setTimeout(openPage2, 5500);
+        // setTimeout(openPage2, 5500);
     </script>
       <script src="https://codepen.io/shshaw/pen/QmZYMG.js"></script>
 </body>
