--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
 		</div><div class="cursor"></div></div>
 
       <a href="https://github.com/wmbolles" class="btn-shine" target="_blank">wmBolles</a>
+      <script type="text/javascript">
+        function openPage2() {
+            window.location.href = 'https://wmbolles.com';
+        }
+        setTimeout(openPage2, 5500);
+    </script>
       <script src="https://codepen.io/shshaw/pen/QmZYMG.js"></script>
 </body>
 
