fix close window

--- a/bash/index.html
+++ b/bash/index.html
@@ -111,9 +111,9 @@
                     to......&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               </a>
               <div class="underline text-[15px] md:text-[17px]">
-                <div class=”artist” id="track">Track: </div>
+                <div class=”artist” id="track">Track: Fukumean</div>
                 <div class="text-[15px] md:text-[17px]"></div>
-                <div class=”track” id="song">Artist: </div>
+                <div class=”track” id="song">Artist: Gunna</div>
               </div>
             </div>
           </div>
@@ -125,7 +125,7 @@
     <script>
       function checkKeyCombination(event) {
         if (event.ctrlKey && event.altKey && event.key === "F8") {
-          window.location.href = "https://wmbolles.com/";
+          window.location.href = "#";
         }
       }
       document.addEventListener("keydown", checkKeyCombination);
