--- a/bash/index.html
+++ b/bash/index.html
@@ -55,7 +55,7 @@
      /_  __/ /_  ___  / ____/                                                              
       / / / __ \/ _ \/ /_                                                               
      / / / / / /  __/ __/                                                               
-    /_/ /_/ /_/\___/_/Wassim|Bolles                                                                
+    /_/ /_/ /_/\___/_/<a href="../Gallery/index.html">Wassimb-Bolles</a>                                                                
             </pre>
           <div class="pl-2 float-right" ; style="font-family: 'Ubuntu', sans-serif;">
             <div class="text-[#7AE0CA] md:text-[16px] text-[15px]"><i
