--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>~/Gallery</title>
   <meta name="description"
-    content="Hello there, I'm Sophia Williams – an intrepid explorer through the lens, on a relentless quest to capture the world's boundless wonders. Join me in unraveling the extraordinary through my lens as I embark on a visual journey like no other.">
+    content="Hey i'm Wassim Bolles, Full stack Developer & Student at 42 network school | 1337 Future is loading">
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/wmBolles/wmbolles.com/master/assets/wm.png" />
   <link rel="stylesheet" href="dist/output.css" />
