--- a/bash/index.html
+++ b/bash/index.html
@@ -27,7 +27,7 @@
 
 
   </script>
-  <title>~/wmbolles/bash</title>
+  <title>~/bash</title>
 </head>
 
 <body style="font-family: 'Ubuntu', sans-serif;" class="overflow-hidden lazy text-[1.1rem] overflow-y-scroll">
