--- a/index.html
+++ b/index.html
@@ -207,6 +207,14 @@ nav {
 </style>
 
 <script>
+  document.addEventListener('contextmenu', event => event.preventDefault());
+document.onkeydown = function(e) {
+    if(e.key === "F12" || (e.ctrlKey && e.shiftKey && e.key === "I")) {
+        return false;
+    }
+};
+
+
   (function () {
   
         const link = document.querySelectorAll('.container');
