--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container"">
         <main>
           <header>
-            <h2 class="subheader">Coming Soon...</h2>
+            <h2 class="subheader">Hey ! i'm</h2>
             <h2>Wassim Bolles <em></em></h2>
             <p>It Architect Student. </p>
           </header>
