--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="logo">
         <div class="lg-cta">
-            <img src="./assets/w.m.png" alt="One Platform Endless Potential" />
+            <!-- <img src="./assets/w.m.png" alt="One Platform Endless Potential" /> -->
         </div>
         <div class="site-links">
             <a href="https://www.github.com/wmbolles" target="blank">Github</a>
