--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
     <link rel="stylesheet" href="./main.css" media="all" />
+    <link rel="icon" type="image/x-icon" href="./assets/wm.png">
     <title>wmbolles under maintenance</title>
 </head>
 <body>
