no_need_to_set_a_commit

--- a/Gallery/loading.html
+++ b/Gallery/loading.html
@@ -5,13 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>loading...</title>
-
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/png" href="../../assets/favicon.png">
 </head>
 <body><br>
-    <h1>loading...<span style="font-size: small;"><br>We're preparing something special for you. Just a moment, please!</span></h1>
-    <h2>Developed by <a href="https://github.com/wmBolles">wassim bolles</a></h2>
+    <h1>
+        <span class="key">L</span>
+        <span class="key">o</span>
+        <span class="key">a</span>
+        <span class="key">d</span>
+        <span class="key">i</span>
+        <span class="key">n</span>
+        <span class="key">g</span>
+        <span class="key">.</span>
+        <span class="key">.</span>
+        <span class="key">.</span>
+        <span style="font-size: small;"><br>We're preparing something special for you. Just a moment, please!</span></h1>
+    <h2>Developed by <a style="text-decoration: none; color: aqua; " href="https://github.com/wmBolles">wassim bolles</a></h2>
     <div class="box">
         <span style="--i:1">
             <img src="./pics/img1000.png" alt="Mohana_sunset_trees">
@@ -39,6 +49,7 @@
         </span>
 
     </div>
+
 </body>
 </html>
 <script>
@@ -52,6 +63,6 @@
             function openPage2() {
                 window.location.href = './index.html';
             }
-            setTimeout(openPage2, 22500);
+            setTimeout(openPage2, 2400);
 
 </script>
