--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -43,7 +43,7 @@
     <nav id="nav" x-data="{ open: false }" role="navigation" class="w-full">
       <div class="container mx-auto flex flex-wrap items-center md:flex-no-wrap">
         <div class="mr-4 md:mr-8">
-          <a href="../index.html" class="text-2xl font-signika font-bold">TheF ~ wmBolles</a>
+          <a href="../index.html" class="text-2xl font-signika font-bold">wmBolles</a>
         </div>
         <div class="ml-auto md:hidden flex items-center justify-start">
           <button onclick="menuToggle()" @click="open = !open"
@@ -403,11 +403,11 @@
   <script src="dist/menu.js"></script>
 </body>
 <script>
-        // document.addEventListener('contextmenu', event => event.preventDefault());
-        // document.onkeydown = function(e) {
-        //     if(e.key === "F12" || (e.ctrlKey && e.shiftKey && e.key === "I")) {
-        //         return false;
-        //     }
-        // };
+        document.addEventListener('contextmenu', event => event.preventDefault());
+        document.onkeydown = function(e) {
+            if(e.key === "F12" || (e.ctrlKey && e.shiftKey && e.key === "I")) {
+                return false;
+            }
+        };
 </script>
 </html>
