--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
+    <head>
+        <meta name="description" content="WASSIM BOLLES wassim bolles wmbolles wassimbolles bolles wassim BOLLES WASSIM">
+    </head>
+    
     <link rel="stylesheet" href="./main.css" media="all" />
     <link rel="icon" type="image/x-icon" href="./assets/wm.png">
     <title>wmbolles under maintenance</title>
