--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h3>We apologize for any inconvenience.</h3>
         </div>
         <div class="footer">
-            <img src="https://media.licdn.com/dms/image/v2/D4E16AQGdcUzadjxUUA/profile-displaybackgroundimage-shrink_350_1400/profile-displaybackgroundimage-shrink_350_1400/0/1726912937867?e=1732147200&v=beta&t=3sGpfrLwCQSDsAys1V2jNHyNm78X4xQb4r1ID8DJZEw" alt="One Platform Endless Potential" />
+            <img src="./assets/wm.png" alt="One Platform Endless Potential" />
         </div>
     </div>
     <script src="./countdown.js"></script>
