--- a/bh/index.html
+++ b/bh/index.html
@@ -1,111 +1,44 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Count Up Timer</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #b9b9b9;
-        }
-
-        .timer {
-            background: #fffcfc;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-
-        h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-
-        .time {
-            font-size: 3em;
-            margin: 10px 0;
-        }
-
-        .label {
-            font-size: 0.8em;
-            color: #555;
-        }
-
-        button {
-            padding: 10px 20px;
-            font-size: 1em;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            background-color: rgb(4, 209, 4);
-            color: rgb(0, 0, 0);
-            margin-top: 20px;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-			font-size: xx-large;
-        }
-    </style>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
+        <meta name="description" content="WASSIM BOLLES wassim bolles wmbolles wassimbolles bolles wassim BOLLES WASSIM">
+    
+    <link rel="stylesheet" href="./main.css" media="all" />
+    <link rel="icon" type="image/x-icon" href="./assets/wm.png">
+    <title>wmbolles under maintenance</title>
 </head>
 <body>
-
-<div class="timer">
-    <h1>Minishell Timer</h1>
-	<h4 style="color: gray;">Max hours 420h</h4>
-    <div class="time">
-        <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>
+    <div class="logo">
+        <div class="lg-cta">
+            <!-- <img src="./assets/w.m.png" alt="One Platform Endless Potential" /> -->
+        </div>
+        <div class="site-links">
+            <a href="https://www.github.com/wmbolles" target="blank">Github</a>
+        </div>
     </div>
-    <div class="label">
-        <span>Hours</span> | <span>Minutes</span> | <span>Seconds</span>
+    <div class="main-content">
+        <div class="notice">
+            <h1>We'll be back soon.</h1>
+            <h3>More specifically, in:</h3>
+            <div class="countdown">
+                <p class="timer">
+                    <span id="days"></span> Day(s)
+                    <span id="hours"></span> Hour(s)
+                    <span id="minutes"></span > Minute(s)
+                    <span id="seconds"></span> Second(s)
+                </p>
+            </div>
+	<h1>This Website under maintenance !</h1>
+            <h3>We apologize for any inconvenience.</h3>
+        </div>
+        <div class="footer">
+            <img src="./assets/wm.png" alt="One Platform Endless Potential" />
+        </div>
     </div>
-    <button id="stopButton">Stop Timer</button>
-</div>
-
-<script>
-function countUp(maxHours) {
-    let timer, hours, minutes, seconds;
-    
-    let maxTime = maxHours * 3600; // Convert 420 hours to seconds
-    let startTime = new Date().getTime(); // Start time
-    let timeElapsed = 0; // Initialize time elapsed
-
-    timer = setInterval(calculate, 1000);
-
-    function calculate() {
-        timeElapsed++; // Increment time elapsed by one second
-
-        if (timeElapsed <= maxTime) {
-            hours   = parseInt(timeElapsed / 3600);
-            let remainingTime = timeElapsed % 3600;
-
-            minutes = parseInt(remainingTime / 60);
-            seconds = remainingTime % 60;
-
-            // Update the HTML elements
-            document.getElementById("hours").innerHTML   = ("0" + hours).slice(-2);
-            document.getElementById("minutes").innerHTML = ("0" + minutes).slice(-2);
-            document.getElementById("seconds").innerHTML = ("0" + seconds).slice(-2);
-        } else {
-            clearInterval(timer); // Stop the timer after reaching maxTime
-        }
-    }
-
-    // Add event listener for the stop button
-    document.getElementById("stopButton").addEventListener("click", function() {
-        clearInterval(timer); // Stop the timer when button is clicked
-    });
-}
-
-// Start counting up to 420 hours
-countUp(420);
-</script>
-
+    <script src="./countdown.js"></script>
 </body>
 </html>
