latest codebase version2.3.2

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container"">
         <main>
           <header>
-            <h2 class="subheader">Coming Soon...</h2>
+            <h2 class="subheader">Heeeeeey !</h2>
             <h2>Wassim Bolles <em></em></h2>
             <p>It Architect Student. </p>
           </header>
@@ -53,7 +53,7 @@
       <a href="https://github.com/wmbolles" class="btn-shine" target="_blank">wmBolles</a>
       <script type="text/javascript">
         function openPage2() {
-            window.location.href = 'https://wmbolles.com/bash';
+            window.location.href = './sh/index.html';
         }
         setTimeout(openPage2, 5500);
     </script>
