--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <a href="https://github.com/wmbolles" class="btn-shine" target="_blank">wmBolles</a>
       <script type="text/javascript">
         function openPage2() {
-            window.location.href = './sh/index.html';
+            window.location.href = './sh';
         }
         setTimeout(openPage2, 5500);
     </script>
