no_need_to_set_a_commit

--- a/Gallery/intro.html
+++ b/Gallery/intro.html
@@ -155,7 +155,7 @@ body {
 
 <script>
   function openPage2() {
-              window.location.href = './loading.html';
+              window.location.href = './loading';
           }
           setTimeout(openPage2, 1500);
 </script>
