--- a/Gallery/loading.html
+++ b/Gallery/loading.html
@@ -61,7 +61,7 @@
 };
 
             function openPage2() {
-                window.location.href = './index.html';
+                window.location.href = './';
             }
             setTimeout(openPage2, 2400);
 
