no_need_to_set_a_commit

--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
       gtag("config", "G-1752YPLP7H");
     </script>
 
-    <title>Page Not Found | 404</title>
+    <title>Page Not Found !</title>
     <link type="text/css" rel="stylesheet" href="css/404.css" />
     <link rel="icon" type="image/x-icon" href="../images/tsParticles-64.png" />
   </head>
