--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -8,7 +8,7 @@
   <title>~/Gallery</title>
   <meta name="description"
     content="Hey i'm Wassim Bolles, Full stack Developer & Student at 42 network school | 1337 Future is loading">
-  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/wmBolles/wmbolles.com/master/assets/wm.png" />
+  <link rel="icon" type="image/x-icon" href="../assets/wm.png" />
   <link rel="stylesheet" href="dist/output.css" />
   <link rel="stylesheet" href="styles.css" />
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
