--- a/Gallery/loading.html
+++ b/Gallery/loading.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>loading...</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/png" href="../../assets/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="../assets/wm.png">
 </head>
 <body><br>
     <h1>
