--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/intro.css">
-	<link rel="icon" type="image/x-icon" href="assets/wm.png">
+	<link rel="icon" type="image/x-icon" href="./assets/wm.png">
     <title>wmBolles</title>
 
     <meta property="og:title" content="Wassim Bolles">
