no_need_to_set_a_commit

--- a/wallet/index.html
+++ b/wallet/index.html
@@ -16,8 +16,8 @@
 			<span>W41137</span>
 		</section>
 		<form id="dwForm" class="flxCol">
-			<input id="username" type="text" placeholder="username" autofocus required/>
-			<input id="password" type="password" placeholder="password" required/>
+			<input id="username" type="text" placeholder="username thef" autofocus required/>
+			<input id="password" type="password" placeholder="password thef" required/>
 			<input id="submitBtn" type="submit" value="submit"/>
 		</form>
 		<p id="newAccTxt">Need an account? <span id="newAcc">signup</span></p>
