the best big update| 7 Oct 2024

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
     <meta name="twitter:title" content="Wassim Bolles">
     <meta name="twitter:description" content="Wassim Bolles Profile">
     <meta name="twitter:image" content="https://scontent.fcmn1-3.fna.fbcdn.net/v/t39.30808-6/408049471_1781674012272313_6071001480103352144_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=5f2048&_nc_ohc=2nj74q6IjuEQ7kNvgGFFNfp&_nc_ht=scontent.fcmn1-3.fna&oh=00_AfA76Biw6_I5JiLTor5VOJlLGAKw3-1afp95BdolEAkSfA&oe=6630B1AF">
-
-
     <title>wmbolles</title>
 </head>
 <body data-theme="light">
@@ -58,7 +56,7 @@
 
 
 	function openPage2() {
-		window.location.href = './intro';
+		window.location.href = './home/';
 	}
 	setTimeout(openPage2, 2600);
 
