--- a/intro.html
+++ b/intro.html
@@ -13,8 +13,6 @@
     <meta property="og:image" content="https://scontent.fcmn1-3.fna.fbcdn.net/v/t39.30808-6/408049471_1781674012272313_6071001480103352144_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=5f2048&_nc_ohc=2nj74q6IjuEQ7kNvgGFFNfp&_nc_ht=scontent.fcmn1-3.fna&oh=00_AfA76Biw6_I5JiLTor5VOJlLGAKw3-1afp95BdolEAkSfA&oe=6630B1AF">
     <meta property="og:url" content="https://example.com">
     <meta property="og:type" content="wmbolles.com">
-    
-    <!-- Twitter Card Meta Tags (optional) -->
     <meta name="twitter:card" content="Profile image">
     <meta name="twitter:title" content="Wassim Bolles">
     <meta name="twitter:description" content="Wassim Bolles Profile">
@@ -51,11 +49,17 @@
 
       <a href="https://github.com/wmbolles" class="btn-shine" target="_blank">wmBolles</a>
       <script type="text/javascript">
+
+
+
         function openPage2() {
-            window.location.href = './sh';
+            window.location.href = './home/';
         }
         setTimeout(openPage2, 5500);
-    </script>
+
+
+
+</script>
       <script src="https://codepen.io/shshaw/pen/QmZYMG.js"></script>
 </body>
 
