adding some forgot paths in expore footer

--- a/home/index.html
+++ b/home/index.html
@@ -218,6 +218,9 @@
                         <li><a href="#skills" class="footer__link">Skills</a></li>
                         <li><a href="#portfolio" class="footer__link">Projects</a></li>
                         <li><a href="#Contact" class="footer__link">Contact</a></li>
+						<li><a href="../Gallery/intro" class="nav__link">Gallery</a></li>
+                        <li><a href="../news/intro" class="nav__link">News</a></li>
+                        <li><a href="../bash/" class="nav__link">Bash</a></li>
                     </ul>
                 </div>
                 
