--- a/bash/index.html
+++ b/bash/index.html
@@ -7,26 +7,79 @@
     <link href="./assets/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap">
     <link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/demo.css">
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="output-wrapper">
-            <div class="welcome-message"></div>
-            <div class="about-section">
-                <h1>~/wmbolles.com/bash</h1>
-				<h2>This Is The CLI (Command-Line Interface) Of This Website !</h2>
-				<!-- <p>TheFShell V0.1<strong> .    This site is currently under development. Stay tuned for updates as we work hard to bring you exciting content soon. Thank you for your patience.</strong> -->
-                </p>
-                <p>you can type <strong>"help"</strong> to get a list of all available commands</p>
-            </div>
-        </div>
-        <div class="prompt-wrapper">
-            <div class="prompt"><span style="color: yellow;">wmbolles</span>@<span style="color: rgb(136, 136, 253);">bash</span>:~$ </div>
-            <input type="text" class="input" maxlength="100">
-        </div>
-    </div>
 
+
+
+
+
+
+
+
+	<div class="meny">
+		<h2>Go Back !</h2>
+		<ul>
+			<li><a href="../home/">Home</a></li>
+			<li><a href="../Gallery/">Gallery</a></li>
+			<li><a href="../news/">News</a></li>
+			<li><a href="../game/">game</a></li>
+			<li><a href="../go/">go</a></li>
+			<li><a href="../404">404</a></li>
+		</ul>
+	</div>
+
+	<div class="meny-arrow"></div>
+
+	<div class="contents">
+		<div class="wrapper">
+			<div class="output-wrapper">
+				<div class="welcome-message"></div>
+				<div class="about-section">
+					<h1>~/wmbolles.com/bash</h1>
+					<h2>This Is The CLI (Command-Line Interface) Of This Website !</h2>
+					<!-- <p>TheFShell V0.1<strong> .    This site is currently under development. Stay tuned for updates as we work hard to bring you exciting content soon. Thank you for your patience.</strong> -->
+					</p>
+					<p>you can type <strong>"help"</strong> to get a list of all available commands</p>
+				</div>
+			</div>
+			<div class="prompt-wrapper">
+				<div class="prompt"><span style="color: yellow;">wmbolles</span>@<span style="color: rgb(136, 136, 253);">bash</span>:~$ </div>
+				<input type="text" class="input" maxlength="100">
+			</div>
+		</div>
+	
+	</div>
+
+
+
+
+
+
+
+
+	<script src="js/meny.js"></script>
+		<script>
+			var meny = Meny.create({
+				menuElement: document.querySelector( '.meny' ),
+				contentsElement: document.querySelector( '.contents' ),
+				position: Meny.getQuery().p || 'left',
+				height: 200,
+				width: 260,
+				threshold: 40,
+				mouse: true,
+				touch: true
+			});
+			if( Meny.getQuery().u && Meny.getQuery().u.match( /^http/gi ) ) {
+				var contents = document.querySelector( '.contents' );
+				contents.style.padding = '0px';
+				contents.innerHTML = '<div class="cover"></div><iframe src="'+ Meny.getQuery().u +'" style="width: 100%; height: 100%; border: 0; position: absolute;"></iframe>';
+			}
+		</script>
+
+		<script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
