--- a/home/index.html
+++ b/home/index.html
@@ -219,8 +219,11 @@
                         <li><a href="#portfolio" class="footer__link">Projects</a></li>
                         <li><a href="#Contact" class="footer__link">Contact</a></li>
 						<li><a href="../Gallery/intro" class="footer__link">Gallery</a></li>
+						<li><a href="../Gallery/game" class="footer__link">game</a></li>
                         <li><a href="../news/intro" class="footer__link">News</a></li>
                         <li><a href="../bash/" class="footer__link">Bash</a></li>
+                        <li><a href="../go/" class="footer__link">go</a></li>
+                        <li><a href="../wallet/" class="footer__link">wallet</a></li>
                     </ul>
                 </div>
                 
