--- a/home/index.html
+++ b/home/index.html
@@ -21,18 +21,19 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
+						<li class="nav__item"><a href="https://profile.intra.42.fr/users/wabolles" class="nav__link"><img src="https://profile.intra.42.fr/assets/42_logo-7dfc9110a5319a308863b96bda33cea995046d1731cebb735e41b16255106c12.svg" style="width: 4vh; height: 4vh;" alt=""></a></li>						
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#portfolio" class="nav__link">Projects</a></li>
                         <li class="nav__item"><a href="../Gallery/intro" class="nav__link">Gallery</a></li>
-                        <li class="nav__item"><a href="../news/intro" class="nav__link">News</a></li>
-                                           
+                        <li class="nav__item"><a href="../news/intro" class="nav__link">News</a></li>						
                     </ul>
                 </div>
                 <div class="nav__menu" id="nav-menu">
 					<ul>
 						<li style="bottom: 4vh;" class="nav__item"><a href="../bash/" class="nav__link">Bash</a></li>
+						
 					</ul>
                 </div>
 
@@ -44,6 +45,7 @@
         </header>
 
         <main class="l-main">
+			
             <!--===== HOME =====-->
             <section class="home" id="home">
                 <div class="home__container bd-grid">
