--- a/home/index.html
+++ b/home/index.html
@@ -156,8 +156,22 @@
                             <a href="https://github.com/wmBolles/MTP/" class="portfolio__link-name">MTP</a>
                         </div>
                     </div>
+                    <div class="portfolio__img">
+						<a href="https://github.com/oakoudad/badge42"><img src="https://badge.mediaplus.ma/kettlebells/wabolles" alt="wabolles's 42 stats" /></a>
+						
+                        <div class="portfolio__link">
+							wabolles's 42 stats
+                        </div>
+                    </div>
+					<div class="portfolio__img">
+						<img style="width: 100vh; height: 25vh;" src="assets/img/pool.png" alt="">
+
+						<div class="portfolio__link">
+							<a href="https://github.com/wmBolles/C_Piscine" class="portfolio__link-name">42 piscine</a>
+						</div>
+					</div>
                     <!-- <div class="portfolio__img">
-                        <img src="assets/img/work5.jpg" alt="">
+						<img src="assets/img/work5.jpg" alt="">
 
                         <div class="portfolio__link">
                             <a href="#" class="portfolio__link-name">View details</a>
