--- a/home/index.html
+++ b/home/index.html
@@ -49,7 +49,7 @@
             <!--===== HOME =====-->
             <section class="home" id="home">
                 <div class="home__container bd-grid">
-                    <h1 class="home__title"><span>Th</span><br>eF/<span style="font-size: xx-small;">Every system has a weakness...</span></h1>
+                    <h1 class="home__title"><span>Th</span><br>eF/<span style="font-size: xx-small;">hard work beats talent when talent doesn't work hard...</span></h1>
 
                     <div class="home__scroll">
                         <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt' ></i>Scroll down</a>
@@ -70,7 +70,7 @@
 
                     <div>
                         <h2 class="about__subtitle">I'm Bolles Wassim<span style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-						color: gray; font-size: small;">Aka TheF</span></h2>
+						color: gray; font-size: small; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Aka TheF</span></h2>
                         <span class="about__profession">Student At<a style="color: rgb(4, 4, 198);;" href="https://www.42network.org/"> 42 Network school</a></span>
                         <p class="about__text">I'm an IT architect student at <a style="color:rgb(4, 4, 198);" href="https://1337.ma/">1337</a> and a web developer passionate about low-level programming and cybersecurity<br>physics enthusiast<br>inventor and investor</p>
 
@@ -91,7 +91,7 @@
             </section>
 
             <!--===== SKILLS =====-->
-            <section class="skills section" id="skills">
+            <section class="skills section" style="background: linear-gradient(rgb(255, 255, 255), rgba(97, 95, 95, 0.517));" id="skills">
                 <h2 class="section-title">Skills</h2>
 
                 <div class="skills__container bd-grid">
@@ -117,7 +117,7 @@
                     </div>
 
                     <div class="skills__img">
-                        <img src="assets/img/img42.png" alt="">
+                        <img src="assets/img/img42.png" style="height: 55vh; width: 32vh; position: relative; left: 10vh;" alt="">
                     </div>
                 </div>
             </section>
@@ -128,7 +128,7 @@
 
                 <div class="portfolio__container bd-grid">
                     <div class="portfolio__img">
-                        <img style="width: 100vh; height: 25vh;" src="assets/img/mandelbrot.png" alt="">
+                        <img style="width: 100vh;" src="assets/img/mand900.gif" alt="">
 
                         <div class="portfolio__link">
                             <a href="https://github.com/wmBolles/42-Fract-Ol" class="portfolio__link-name">Fract-ol</span></a>
@@ -136,38 +136,38 @@
 						</div>
                     </div>
                     <div class="portfolio__img">
-                        <img style="width: 100vh; height: 25vh; "src="assets/img/42map.png" alt="">
+                        <img style="width: 100vh; "src="assets/img/map900.png" alt="">
  
                         <div class="portfolio__link">
                             <a href="https://github.com/wmBolles/42_Cursus" class="portfolio__link-name">42 cursus</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img style="width: 100vh; height: 25vh;" src="assets/img/Calc.png" alt="">
+                        <img style="width: 100vh;" src="assets/img/calc900.png" alt="">
 
                         <div class="portfolio__link">
                             <a href="https://github.com/wmBolles/FlexiCalc" class="portfolio__link-name">FlexiCalc</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img style="width: 100vh; height: 25vh;" src="assets/img/htuse.png" alt="">
+                        <img style="width: 100vh; " src="assets/img/htuse900.png" alt="">
 
                         <div class="portfolio__link">
                             <a href="https://github.com/wmBolles/MTP/" class="portfolio__link-name">MTP</a>
                         </div>
                     </div>
-                    <div class="portfolio__img">
+                    <!-- <div class="portfolio__img">
 						<a href="https://github.com/oakoudad/badge42"><img src="https://badge.mediaplus.ma/kettlebells/wabolles" alt="wabolles's 42 stats" /></a>
 						
                         <div class="portfolio__link">
 							wabolles's 42 stats
                         </div>
-                    </div>
+                    </div> -->
 					<div class="portfolio__img">
-						<img style="width: 100vh; height: 25vh;" src="assets/img/pool.png" alt="">
+						<img style="width: 100vh;" src="assets/img/pool900.png" alt="">
 
 						<div class="portfolio__link">
-							<a href="https://github.com/wmBolles/C_Piscine" class="portfolio__link-name">42 piscine</a>
+							<a href="https://github.com/wmBolles/C_Piscine" class="portfolio__link-name" >42 piscine</a>
 						</div>
 					</div>
                     <!-- <div class="portfolio__img">
@@ -199,7 +199,7 @@
                         <h3 class="contact__subtitle">PHONE</h3>
                         <span class="contact__text">+212 625-218307</span>
 
-                        <h3 class="contact__subtitle">ADRESS</h3>
+                        <h3 class="contact__subtitle">ADDRESS</h3>
                         <span class="contact__text">Khouribga</span>
                     </div>
 
