--- a/home/index.html
+++ b/home/index.html
@@ -49,7 +49,7 @@
             <!--===== HOME =====-->
             <section class="home" id="home">
                 <div class="home__container bd-grid">
-                    <h1 class="home__title"><span>Th</span><br>eF/<span style="font-size: xx-small;">hard work beats talent when talent doesn't work hard...</span></h1>
+                    <h1 class="home__title"><span>Th</span><br>eF/<span style="font-size: xx-small;  font-family: 'Roboto Mono', monospace;" >Hello World !</span></h1>
 
                     <div class="home__scroll">
                         <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt' ></i>Scroll down</a>
@@ -117,7 +117,7 @@
                     </div>
 
                     <div class="skills__img">
-                        <img src="assets/img/img42.png" style="height: 55vh; width: 32vh; position: relative; left: 10vh;" alt="">
+                        <img src="assets/img/img42.png" style="height: 55vh; width: 32vh; position: relative; left: 100vh;" alt="">
                     </div>
                 </div>
             </section>
