no_need_to_set_a_commit

--- a/home/index.html
+++ b/home/index.html
@@ -60,7 +60,7 @@
             </section>
             
             <!--===== ABOUT =====-->
-            <section class="about section" id="about">
+            <section class="about section" style="background: linear-gradient(rgba(97, 95, 95, 0.517),#fff) ;" id="about">
                 <h2 class="section-title">About</h2>
 
                 <div class="about__container bd-grid">
