no_need_to_set_a_commit

--- a/home/index.html
+++ b/home/index.html
@@ -91,7 +91,7 @@
             </section>
 
             <!--===== SKILLS =====-->
-            <section class="skills section" style="background: linear-gradient(rgb(255, 255, 255), rgba(97, 95, 95, 0.517));" id="skills">
+            <section class="skills section" id="skills">
                 <h2 class="section-title">Skills</h2>
 
                 <div class="skills__container bd-grid">
