--- a/home/index.html
+++ b/home/index.html
@@ -49,7 +49,7 @@
             <!--===== HOME =====-->
             <section class="home" id="home">
                 <div class="home__container bd-grid">
-                    <h1 class="home__title"><span>Th</span><br>eF/<span style="font-size: xx-small;  font-family: 'Roboto Mono', monospace;" >Hello World !</span></h1>
+                    <h1 class="home__title"><span>Th</span><br>eF/<span style="font-size: xx-small;  font-family: 'Roboto Mono', monospace;" Hello World !</span></h1>
 
                     <div class="home__scroll">
                         <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt' ></i>Scroll down</a>
@@ -242,7 +242,7 @@
                         <li><a href="../news/intro" class="footer__link">News</a></li>
                         <li><a href="../bash/" class="footer__link">Bash</a></li>
                         <li><a href="../go/" class="footer__link">go</a></li>
-                        <li><a href="../wallet/" class="footer__link">wallet</a></li>
+                        <!-- <li><a href="../wallet/" class="footer__link">wallet</a></li> -->
                     </ul>
                 </div>
 				
